--- a/jpf_hanjie_txt.html
+++ b/jpf_hanjie_txt.html
@@ -19,6 +19,10 @@
    <title>The Hanjie Puzzle</title>
    <link href="jpf_base.css" rel="stylesheet" />
    <link href="jpf_layout.css" rel="stylesheet" />   
+   <link href="jpf_hanjie.css" rel="stylesheet"/>
+   
+   <script src="jpf_grids1.js" async></script>
+   <script src="jpf_hanjie_txt.js" async></script>
 </head>
 
 <body>
