--- a/jpf_hanjie.html
+++ b/jpf_hanjie.html
@@ -22,7 +22,7 @@
    <link href="jpf_hanjie.css" rel="stylesheet"/>
    
    <script src="jpf_grids1.js" async></script>
-   <script src="jpf_hanjie_txt.js" async></script>
+   <script src="jpf_hanjie.js" async></script>
 </head>
 
 <body>
